--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/bootstrap-4.6.0/dist/css/bootstrap.css">
-    <title>Proyecto De Bases De Datos</title>
-</head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
+    <link rel="stylesheet" href="css/bootstrap-4.6.0/diseño.css">
+    <title>Ejemplo</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+</header>
 <body>
-    <div class="form-row">
-        <nav>
-            <ul>
-                <li>
-                    <a href="./html/facturacion.php">Facturacion</a>
-                </li>
-                <li>
-                    <a href="https://www.google.com">Salir</a>
-                </li>
-            </ul>
-        </nav>
+    <div class="signup-form">
+        <form>
+            <h2>AutoServicio</h2>
+            <p class="hint-text">New Market!.</p>
+            <div class="form-group">
+                <div class="row">
+                    <div class="form-row">
+                        <div class="col">
+                            <a class="btn btn-success btn-lg btn-block" href="./html/cliente.php">Registro</a>
+                        </div>
+                        <div class="col">
+                            <a class="btn btn-success btn-lg btn-block" href="./html/facturacion.php">Facturacion</a>
+                        </div>
+                        <div class="col">
+                            <a class="btn btn-success btn-lg btn-block" href="https://www.google.com">Salir</a>
+                        </div>
+                    </div>
+                </div>
+            </div>            
+        </form>
     </div>
-    
 </body>
 </html>
